@@ -1,3 +1,9 @@
+2005-06-04  Richard Henderson  <rth@redhat.com>
+
+        PR target/21888
+        * config/alpha/alpha.c (alpha_align_insns): Don't insert nops
+        until we've passed initial ldgp.
+
 2005-06-04  David Edelsohn  <edelsohn@gnu.org>
 
 	* config/rs6000/aix52.h (ASM_CPU_SPEC): Add power5.
